feat!: migrate to WXT (refs #31)

--- a/.releaserc
+++ b/.releaserc
@@ -1,19 +1,13 @@
 {
-  "branches": [
-    "main"
-  ],
+  "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "semantic-release-contributors",
-    [
-      "@semantic-release/npm",
-      { "npmPublish": false}
-    ],
+    ["@semantic-release/npm", { "npmPublish": false }],
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "pnpm dlx tsx scripts/updateManifest.ts ${nextRelease.version} && pnpm build && cd dist && zip -r ../mpc-extension-${nextRelease.version}.zip ."
+        "prepareCmd": "pnpm dlx tsx scripts/update-wxt-config.ts ${nextRelease.version} && pnpm zip && pnpm zip:firefox"
       }
     ],
     "@semantic-release/changelog",
@@ -22,8 +16,16 @@
       {
         "assets": [
           {
-            "path": "mpc-extension-*.zip",
-            "label": "Chrome Extension Build"
+            "path": ".output/mpc-extension-*-chrome.zip",
+            "label": "Chrome Web Store"
+          },
+          {
+            "path": ".output/mpc-extension-*-firefox.zip",
+            "label": "Mozilla Add-ons"
+          },
+          {
+            "path": ".output/mpc-extension-*-sources.zip",
+            "label": "Firefox Source Code (Required)"
           }
         ]
       }
@@ -31,13 +33,8 @@
     [
       "@semantic-release/git",
       {
-        "assets": [
-          "package.json",
-          "public/manifest.json",
-          "package-lock.json",
-          "CHANGELOG.md"
-        ],
-        "message": "chore(release): update version to ${nextRelease.version} [skip ci]"
+        "assets": ["package.json", "wxt.config.ts", "CHANGELOG.md"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]"
       }
     ]
   ]
