--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -51,6 +52,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
