--- a/.releaserc
+++ b/.releaserc
@@ -7,7 +7,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "pnpm dlx tsx scripts/update-wxt-config.ts ${nextRelease.version} && pnpm zip && pnpm zip:firefox"
+        "prepareCmd": "pnpm dlx tsx scripts/update-wxt-config.ts ${nextRelease.version} && pnpm dlx tsx scripts/update-info.ts \"${nextRelease.version}\" \"${nextRelease.notes}\" && pnpm zip && pnpm zip:firefox"
       }
     ],
     "@semantic-release/changelog",
@@ -33,7 +33,7 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["package.json", "wxt.config.ts", "CHANGELOG.md"],
+        "assets": ["package.json", "wxt.config.ts", "CHANGELOG.md", "assets/data/info.json"],
         "message": "chore(release): ${nextRelease.version} [skip ci]"
       }
     ]
